--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
     "eslint": "6.1.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-terser": "^1.2.0",
     "husky": "^3.0.7",
     "jest": "^24.9.0",
-    "lerna": "^3.15.0"
+    "lerna": "^3.15.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.22.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.2"
   },
   "workspaces": [
     "packages/*"
@@ -29,6 +39,7 @@
   },
   "scripts": {
     "test": "jest -c ./jest.config.js --coverage",
-    "publish": "lerna run publish"
+    "publish": "lerna run publish",
+    "build": "lerna run build"
   }
 }
