--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@babel/preset-env": "^7.6.2",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/config-lerna-scopes": "^8.2.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "docma": "^3.2.2",
     "eslint": "6.1.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsdoc": "^15.9.5",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-terser": "^1.2.0",
