--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -7,7 +7,7 @@
   "author": "Sabin Marcu <sabinmarcu@gmail.com>",
   "license": "ISC",
   "scripts": {
-    "build": "run-p build:*",
+    "build": "run-s build:*",
     "build:clean": "rimraf dist",
     "build:rollup": "NODE_ENV=production rollup -c ./rollup.config.js",
     "build:gulp": "gulp",
