--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "docma": "^3.2.2",
+    "env-cmd": "^10.0.1",
     "eslint": "6.1.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -23,6 +24,7 @@
     "husky": "^3.0.7",
     "jest": "^24.9.0",
     "lerna": "^3.15.0",
+    "netlify-cli": "^2.15.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "rollup": "^1.22.0",
