--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
+    "@babel/preset-flow": "^7.0.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@commitlint/config-lerna-scopes": "^8.2.0",
@@ -16,8 +17,11 @@
     "env-cmd": "^10.0.1",
     "eslint": "6.1.0",
     "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsdoc": "^15.9.5",
+    "flow-bin": "^0.111.1",
+    "flow-typed": "^2.6.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-terser": "^1.2.0",
