--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,10 @@
 extends:
-  - airbnb-base
-  - plugin:jsdoc/recommended
-parser: babel-eslint
+  - airbnb-typescript
+  # - plugin:jsdoc/recommended
+parser: '@typescript-eslint/parser'
 rules:
   no-console: 0
 env:
   jest: true
-plugins:
-  - eslint-plugin-jsdoc
+# plugins:
+#   - eslint-plugin-jsdoc
